# pioneers-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
pioneers_cli/: __init__.py  auth.py  cli.py  config.py
tests/: test_cli.py  test_config.py
