[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pioneers-cli"
version = "0.1.0"
description = "CLI for AI Pioneers cloud — authenticate, configure, and connect your tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tobias Oberrauch" }]
keywords = ["cli", "pioneers", "cloud", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
pioneers = "pioneers_cli.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["pioneers_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
